test/oscar/compiler/errors/operandMismatch.oscar
def main() => unit = {
  Println(1 + 1.0);
}